# zhmm-tauri

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: demo_data.xlsx
resources/: site_catalog.json
src/: App.vue  api.ts  components.d.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  anti_capture.rs  commands.rs  crypto.rs  errors.rs  io_json.rs  io_xlsx.rs  lib.rs  main.rs  models.rs  settings.rs  site_catalog.rs  totp.rs  vault.rs
src/components/: AddRoleDialog.vue  BackupListDialog.vue  CreateVaultDialog.vue  PasswordEditDialog.vue  PasswordHistoryDialog.vue  PasswordStrengthBar.vue  RandomPasswordDialog.vue  RekeyDialog.vue  SiteCatalogDialog.vue  TagManagementDialog.vue  TagSidebar.vue  TotpCell.vue  UnlockDialog.vue  WelcomeWidget.vue
src/composables/: usePasswordReveal.ts
src/layouts/: MainLayout.vue
src/router/: index.ts
src/styles/: global.css
src/themes/: index.ts
src/themes/presets/: cyberpunk.ts  glass.ts  minimal.ts  warm.ts
src/utils/: passwordStrength.ts
src/views/: DataManagementView.vue  FileListView.vue  LoginView.vue  PasswordListView.vue  RoleManagementView.vue  SettingsView.vue
