[package]
name = "zhmm-tauri"
version = "0.1.0"
description = "基于国密算法 SM3/SM4 的本地优先密码管理器（Tauri + Vue 3 + Rust），与 Python 版 zhmm 共享 .zmb 密库格式"
authors = ["szgenle"]
edition = "2021"
license = "MIT"
repository = "https://github.com/szgenle/zhmm-tauri"
homepage = "https://github.com/szgenle/zhmm-tauri"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zhmm_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 加密与安全（RustCrypto 生态）
sm3 = "0.4"
sm4 = "0.5"
cbc = { version = "0.1", features = ["std"] }
hmac = "0.12"
digest = "0.10"
cipher = "0.4"
argon2 = "0.5"
bcrypt = "0.15"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
subtle = "2.6"
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
url = "2"

# 数据与状态
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "1"

# 导入导出 Excel
calamine = "0.26"
rust_xlsxwriter = "0.79"

